fix: removes disabled button flickering

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -79,6 +79,10 @@ body {
   color: var(--primary-font-color);
 }
 
+button:disabled {
+  color: var(--primary-font-color);
+}
+
 nav > right,
 nav > left {
   background-color: var(--secondary-font-color);
